...
    "tabs": {
        "orders": "Orders",
        "clients": "Clients",
        "visits": "Visits"
    },
    "orders": {
        "title": "My orders",
        "no_orders": "You have not placed any orders yet.",
        "delivery": "Scheduled delivery: ",
        "truck": "Assigned truck: ",
        "products": "Products"
    },
    "new_order": {
...
