...
class _FindingsTextFieldState extends State<FindingsTextField> {

  @override
  Widget build( BuildContext context ) {

    return TextFormField(
      key: const Key('findings_text_field'),
      controller: widget.controller,
      maxLines: 8,
      style: GoogleFonts.poppins(
        fontSize: ResponsiveApp.dSize( 14.0 ),
        color: ColorsApp.textColor
      ),
...
